Created first endpoint to return the list of projects and changed the db schema definition

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.port=8081
 
-spring.datasource.url=jdbc:h2:file:./database/applicationDatabase
 spring.h2.console.enabled=true
+spring.h2.console.path=/console
+spring.datasource.url=jdbc:h2:file:./database/applicationDatabase;INIT=CREATE SCHEMA IF NOT EXISTS APPDATABASE\\;SET SCHEMA APPDATABASE
 spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
