Added spring security configurations and started JWT authentication impl

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.url=jdbc:h2:file:./database/applicationDatabase;INIT=CREATE SC
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
+
+jwt.secret=CharactersSequenceToSignToken
+jwt.expiration=60000
